# orca

./: .gitignore  Action.py  CLA.md  CONTRIBUTING  LICENSE  README.md  config_interfaces.py  equipment_resource.py  labware.py  location.py  main.py  method.py  method_executor.py  method_status.py  pyproject.toml  requirements-dev.txt  requirements.txt  resource_pool.py  router.py  setup.py  system.py  system_builder.py  system_template.py  workflow.py  workflow_executor.py
.github/workflows/: publish.yml
drivers/: base_resource.py  drivers.py  ilabware_transporter.py  resource_factory.py
drivers/venus/: interface.py  server.hsl
examples/: amp_seq_assay.yml  hitpick_example.yml  smc_assay_example.yml
examples/amp_seq_assay/: amp_seq_assay.orca.yml
examples/pylabrobot_example/: pylabrobot_example.py
examples/simple_venus_example/: simple_venus_example.py
examples/smc_assay/: ddr2.xml  ddr3.xml  smc_assay_example.orca.yml  smc_assay_example.py  smc_assay_example.yml  spawn_384_tips.py  spawn_final_plate.py  translator2.xml
resource_models/: base_resource.py  drivers.py  equipment_resource.py  ilabware_loadable.py  labware.py  location.py  plate_pad.py  resource_factory.py  resource_pool.py  transporter_resource.py
resource_models/loadable_resources/: ilabware_loadable.py  location.py
routing/: route_builder.py  router.py  system_graph.py
scripting/: scripting.py
src/: orca.py  orca_core.py
src/cli/: local_shell.py  orca_cli.py  shell_interface.py
src/drivers/: driver_interfaces.py  driver_socket_client.py  drivers.py  plate_pad.py  transporter_interfaces.py  transporter_resource.py
src/orca/: config_interfaces.py  helper.py  orca.py  orca_core.py  orca_entry.py
src/resource_models/: base_resource.py  location.py
src/scripting/: scripting.py
src/system/: method_executor.py  move_handler.py  registries.py  reservation_manager.py  resource_registry.py  system.py  system_map.py  thread_manager.py  workflow_registry.py
src/workflow_models/: action.py  dynamic_resource_action.py  labware_thread.py  route.py  spawn_thread_action.py  workflow.py  workflow_templates.py
src/yml_config_builder/: config_file.py  configs.py  dynamic_config.py  resource_factory.py  special_yml_parsing.py  template_factories.py
system/: labware_registry_interfaces.py  move_handler.py  registries.py  registry_interfaces.py  resource_registry.py  system.py  system_map.py  template_registry_interfaces.py  thread_manager.py
tests/: conftest.py  mock.py  mock_config1.yml  mock_config2.yml  test_config.py  test_graph.py  test_router.py  test_teachpoints.xml  test_variable_resolution.py
tests/mock_venus_methods/: test-initialize.hsl  test-initialize.med  test-initialize.stp  test-initialize.sub  test-method.lay  test-method.res  (+6 more)
workflow_models/: action.py  location_action.py  method_action.py  route.py  spawn_thread_action.py  status_enums.py  workflow.py  workflow_templates.py  wrokflow_templates.py
yml_config_builder/: config_file.py  config_to_template_adapters.py  config_to_template_builders.py  configs.py  dynamic_config.py  resource_factory.py  template_builders.py  template_factories.py  variable_resolution.py
yml_schema/: orca_schema.json
(+133 files in other folders)
