[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheshire-orca"
version = "0.2.2"
description = "Laboratory Automation Framework"
authors = [
    { name = "Cheshire Labs", email = "support@cheshirelabs.io" }
]
urls = {Repository = "https://github.com/Cheshire-Labs/orca"}
readme = "README.md"
license = {text = "AGPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.7.4", 
    "python-socketio>=5.11.2",
    "networkx>=3.3", 
    "matplotlib>=3.9.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.3", 
    "orca-interfaces>=0.1.0",
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",  
    "types-PyYAML",
    "types-setuptools",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.scripts]
orca = "orca.orca_entry:main"